# minuska

./: .gitignore  LICENSE  README.md  build-and-profile.sh  build-rec.sh  flake.nix  parse-log-groups.py  parse-timing-log.sh  rec-all.sh  rec-benchmark-selection.txt  rec.sh  rec_normalize
.github/workflows/: build-and-profile.yml  release.yml
bench-coq/: README.md  build-and-profile.sh  generate-v-files.py
bench-hybrid/: README.md  test.sh
bench-hybrid/coqfiles/: imp.v
bench-hybrid/imp-ast/: count-1.imp  count-2.imp  count-3.imp  count-4.imp  count-5.imp  count-6.imp  count-7.imp
bench-hybrid/tc-ast/: tc10.ast  tc100.ast  tc20.ast  tc50.ast
bench-hybrid/test-imp/: testCount1.v  testCount2.v  testCount3.v  testCount4.v  testCount5.v  testCount6.v  testCount7.v
bench-hybrid/test-tc/: testTC10.v  testTC100.v  testTC20.v  testTC50.v
bench-standalone/: README.md  test.sh
coq-minuska/: Makefile.coq  Makefile.coq.conf  _CoqProject  coq-minuska.opam  dune  dune-project
coq-minuska/coqdocjs-extra/: README.md
coq-minuska/lib/: dune  minuska_extraction.v
coq-minuska/theories/: basic_properties.v  conservative_merge.v  default_everything.v  default_static_model.v  dune  example.v  example_models.v  extensions.v  fresher.v  frontend.v  hilang.v  interp_loop.v  interpreter_results.v  lowlang.v  martelli_montanari.v  martelli_montanari_tests.v  minusl_compile.v  minusl_compile_properties.v  minusl_semantics.v  minusl_syntax.v  model_algebra.v  model_functor.v  model_traits.v  naive_interpreter.v  nat_builtin.v  notations.v  ocaml_interface.v  playground.v  prelude.v  properties.v  pval_ocaml_binding.v  quickchick_setup.v  signature_morphism.v  spec.v  spec_interpreter.v  spec_syntax.v  specb.v  substitution_parallel.v  substitution_parallel_properties.v  substitution_parseq_conv.v  (+9 more)
coq-minuska/theories/builtin/: bool_model.v  bool_signature.v  empty.v  example_list_int_model.v  information_flow_functor.v  int_model.v  int_signature.v  klike.v  list_model.v  list_signature.v
coq-minuska/theories/hidden/: hidden_unit.v
coq-minuska/theories/pi/: trivial.v
doc/: comparison-to-k-framework.md  dependencies.md  developer-guide.md  ideas.md  user-guide.md
examples-coq/src/: generic_driver.ml
examples-coq/theories/: examples.v
examples-hybrid/: test.sh
examples-hybrid/coqfiles/: imp.v
examples-hybrid/imp-ast/: count-2.imp
examples-hybrid/test-imp/: testCount7.v
examples-standalone/: test.sh
examples-standalone/m/: complex.m  decrement-builtin.m  two-counters.m
examples-standalone/m/imp/imp-parser/lib/: dune  parser.mly
examples-standalone/test-imp/: testCount1.v  testCount3.v  testCount4.v  testCount5.v
languages-in-coq/: README.md  _CoqProject
languages-in-coq/theories/: examples.v  examples_unary_nat.v
languages/arith/: arith.m  def.m  dune  dune-project  lang.scm  run.ml  transform.ml
languages/arith/tests/: 01.result  02.arith  03.arith
languages/decrement/: decrement.m  def.m  dune  dune-project  lang.scm  run.ml  syntax.ml  transform.ml
languages/decrement-builtin/: decrement-builtin.m  def.m  dune  dune-project  lang.scm  run.ml
languages/fail-invalid-semantics/: def.m  dune  dune-project  lang.scm  run.ml  transform.ml
languages/imp/: dune  dune-project  imp.m  lang.scm  run.ml  runimp.ml  transform.ml
languages/imp/parser/: dune-project
languages/imp/tests/: 00-assign-lookup-trivial.result  01.result  02-assign-lookup.imp  03-count-10.imp  03-count-10.result  count-1.imp  count-3.imp  count-4.imp  count-5.imp  count-6.imp  count-7.imp  ite.imp
languages/two-counters/: def.m  dune  dune-project  lang.scm  parser.mly  run.ml  transform.ml  two-counters.m
languages/with-user-builtins/: README.md  def.m  dune  dune-project  lang.scm  myalgebra.v  myplugin.ml  run.ml
languages/with-user-builtins/lib/: dune
languages/with-user-builtins/test/: dune
minuska/: Makefile.coq.local  README.md  _CoqProject  coq-minuska.opam  dune  dune-project  imp.m  trivial.m
minuska-bench/: _CoqProject  parse-log-groups.py  stats-to-tex.sh
minuska-bench/theories/: benchmark-list.v.template  benchmark-template-head.v  benchmarking_in_coq.v
minuska-examples/: _CoqProject  complex.m  decrement.m  test.sh
minuska-examples/m/: complex.m  decrement-builtin.m  decrement.m  fail-invalid-semantics.m  imp.m  mapstring.m
minuska-examples/src/: imp.ml  imp.mly  imp_lexer.mll  imp_parser.mly
minuska-examples/theories/: dep.v  examples.v  examples_unary_nat.v  extraction.v
minuska-symbolic/: _CoqProject
minuska-symbolic/theories/: color.v
minuska/lib/: backgroundI.ml  basics.ml  coqminuskai.ml  dune  lexer.mll  libminuska.ml  micoqprint.ml  minuska.ml  minuska_extraction.v  miparse.ml  miprint.ml  miskeleton.ml  miunparse.ml  parser.mly  pluginbase.ml  programparser.ml  stringutils.ml  syntax.ml  util.ml
minuska/src/: dune  example_lang_driver.ml  fib_native_driver.ml  lexer.mll  minuska.ml  minuska_lexer.mll  minuska_parser.mly  parser.mly  sum_to_n_driver.ml  syntax.ml  two_counters_driver.ml
minuska/theories/: BuiltinValue.v  basic_matching.v  basic_properties.v  benchmarking_in_coq.v  builtins.v  color.v  default_everything.v  default_static_model.v  dt.v  dune  empty_builtin.v  example.v  examples.v  examples_unary_nat.v  extraction.v  flatten.v  flattened.v  frontend.v  graph.v  interp_loop.v  interpreter_results.v  lowlang.v  maton.v  minuska.v  minusl_compile.v  minusl_compile_properties.v  minusl_semantics.v  minusl_syntax.v  naive_interpreter.v  notations.v  on_a_good_reordering.v  prelude.v  properties.v  pval_ocaml_binding.v  semantics_properties.v  spec.v  spec_interpreter.v  spec_lowlang_interpreter.v  spec_semantics.v  spec_syntax.v  (+13 more)
minuska/theories/builtin/: empty.v  klike.v
minuska/theories/pi/: trivial.v
nix/: coqMinuskaFun.nix  libminuskaSrcFun.nix  minuskaFun.nix
old-examples-coq/theories/: examples.v  examples_unary_nat.v
rec-2015-convecs/REC-LIB/: add16-rules.rec  add32-opns.rec  add32-rules.rec  add8-rules.rec  hanoi.rec  (+15 more)
rec-benchmarks/: README.md  rec-benchmark-selection.txt  rec-coqc.sh  rec-ocamlc.sh
(+162 files in other folders)
