(lang dune 3.14)
(using coq 0.8)


(name coq-minuska)

(using menhir 3.0)

(generate_opam_files true)

(source
 (github h0nzZik/minuska))

(authors "Jan Tušil")

(maintainers "Jan Tušil")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name coq-minuska)
 (synopsis "A formally verified semantic framework")
 (description "A longer description")
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
