(lang dune 3.14)
(using coq 0.8)


(name coq-minuska)
(version 0.2)

(using menhir 3.0)

(generate_opam_files true)

(source
 (github h0nzZik/minuska))

(authors "Jan Tušil <jenda.tusil@gmail.com>")

(maintainers "Jan Tušil <jenda.tusil@gmail.com>")

(license MIT)

(package
 (name coq-minuska)
 (depends
    coq
    menhir
    core
    zarith
    core_unix
 )
 (synopsis "A formally verified programming language framework")
 (description "Minuska is a programming language framework capable of generating interpreters from operational semantics.")
 (tags
  ("operational semantics" interpreters)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
