(lang dune 3.14)

(name minuska)
(version 0.2)

(using menhir 3.0)

(generate_opam_files true)

(source
 (github h0nzZik/minuska))

(authors "Jan Tušil <jenda.tusil@gmail.com>")

(maintainers "Jan Tušil <jenda.tusil@gmail.com>")

(license MIT)

(package
 (name minuska)
 (depends
    benchmark
    menhir
    core
    zarith
    core_unix
    yaml
   ;  coq-minuska
 )
 (synopsis "A formally verified programming language framework")
 (description "Minuska is a programming language framework capable of generating interpreters from operational semantics.")
 (tags
  ("operational semantics" interpreters)))


