(include_subdirs qualified)

(coq.theory
 (name Minuska)
 (package coq-minuska)
 (theories stdpp Ltac2 Equations)
 (plugins coq-equations)
 (coqdoc_flags 
   --toc --toc-depth 2 --html --interpolate
  --index indexpage --no-lib-name --parse-comments
  --with-header %{dep:../coqdocjs-extra/header.html}
  --with-footer %{dep:../coqdocjs-extra/footer.html}
 )
 (modules :standard)
)

(install
 (files (glob_files Minuska.html/*))
 (section share)
 (package coq-minuska))

(install
 (package coq-minuska)
 (section share)
 (source_trees (%{project_root}/coqdocjs-extra/resources/ as Minuska.html/resources))
)