(env (dev (flags (:standard -warn-error -A))))

(ocamllex
  (modules lexer)
)

(menhir
  (modules parser)
  (flags -la 2)
)


(executable
  (public_name run)
  (package arith)
  (name run)
  (libraries
      minuska
  )
  (modules syntax run internal parser lexer transform )
)

(rule
  (targets internal.ml internal.mli)
  (deps lang.scm def.m)
  (action
  (chdir %{workspace_root}
  (run minuska generate-interpreter-ml lang.scm internal.ml)))
)
