(env (dev (flags (:standard -g -warn-error -A))))

(ocamllex
  (modules lexer)
)

(menhir
  (modules parser)
  (flags -la 2)
)


(executable
  (public_name run)
  (package arith)
  (name run)
  (libraries
      minuska minuska.pluginbase
  )
  (modules syntax run internal parser lexer transform )
  (modes (native exe) (byte exe))
)

(rule
  (targets internal.ml internal.mli)
  (deps lang.scm def.m)
  (action
  (chdir %{workspace_root}
  (run minuska generate-interpreter-ml lang.scm internal.ml)))
)
