
(env (dev (flags (:standard -warn-error -A))))

(executable
  (public_name run)
  (package mylang)
  (name run)
  (libraries
      minuska
  )
  (modules run internal)
)

;(coq.extraction
; (prelude myalgebra)
; (extracted_modules Myalgebra)
; (theories Minuska)
; (plugins)
;)
(rule
  (targets myalgebra.ml myalgebra.mli)
  (deps myalgebra.v)
  (action (
    chdir %{workspace_root} (run minuska info run -- coqc myalgebra.v)
  ))
)

(executable
  (modes plugin)
  (name myplugin)
  (modules myplugin myalgebra)
  (libraries core minuska.pluginbase)
)


(rule
  (targets internal.ml internal.mli)
  (deps lang.scm def.m myplugin.cmxs)
  (action
  (chdir %{workspace_root}
  (run minuska generate-interpreter-ml --dynload myplugin.cmxs lang.scm internal.ml)))
)
