
(env (dev (flags (:standard -warn-error -A))))

(executable
  (public_name run)
  (package mylang)
  (name run)
  (libraries
      minuska
  )
  (modules run internal myalgebra)
)


(rule
  (targets internal.ml internal.mli)
  (deps def.m)
  (action
  (chdir %{workspace_root}
  (run minuska generate-interpreter-ml def.m internal.ml)))
)


(rule
  (targets myalgebra.ml myalgebra.mli)
  (deps myalgebra.v)
  (action (
    chdir %{workspace_root} (bash "$(minuska info coqbin)/coqc $(minuska info coqflags) -Q . User myalgebra.v")
  ))
)
