(ocamllex
  (modules lexer)
)

(menhir
  (modules parser)
  (flags -la 2)
)

(env
  (dev
    (flags (:standard -warn-error -A))))

(library
  (name libminuskapluginbase)
  (public_name minuska.pluginbase)
  (modules pluginbase stringutils dsm)
  (libraries
    ; coq-minuska
    core
    zarith
  )
  (preprocess (pps ppx_jane))
)

(library
 (name libminuska)
 (public_name minuska)
 (modules syntax parser lexer miparse micoqprint miunparse miskeleton programparser libminuska)
 (libraries
    benchmark
    core
    core_unix
    core_unix.command_unix
    core_unix.filename_unix
    dynlink
    libminuskapluginbase
 )
 (preprocess (pps ppx_jane))
)
