(ocamllex
  (modules lexer)
)

(menhir
  (modules parser)
  (flags -la 2)
)

(env
  (dev
    (flags (:standard -warn-error -A))))

(library
  (name libminuskapluginbase)
  (public_name minuska.pluginbase)
  (modules pluginbase dsm syntax util)
  (libraries
    core
    stdlib
    zarith
    sexplib
  )
  (preprocess (pps ppx_sexp_value ppx_sexp_conv))
)

(library
 (name libminuska)
 (public_name minuska)
 (modules parser lexer miparse micoqprint miunparse miskeleton programparser libminuska)
 (libraries
    benchmark
    stdlib
    core
    core_unix
    core_unix.command_unix
    core_unix.filename_unix
    dynlink
    libminuskapluginbase
 )
 (preprocess (pps ppx_jane))
)
